--- a/public/src/css/ServicesPage.css
+++ b/public/src/css/ServicesPage.css
@@ -17,22 +17,34 @@
 
 .service-inform {
     text-align: center;
-    width: 65%;
-    height: auto;
+    width: 70%;
+    height: 500px;
     background-color: white;
     margin-left: auto;
     margin-right: auto;
-    display: block;
     box-shadow: 5px 10px;
     padding: 5px;
+    margin-top: auto;
+    margin-bottom: auto;
+    flex-direction: column;
+    display: flex;
+    justify-content: space-between;
+
 }
+
+
 
 .col-inform {
     padding: 10px;
 }
 
-.col-inform h2 {
+.col-inform h1 {
     font-family: 'Courier New', Courier, monospace;
     font-style: italic;
 
+}
+
+.background-phim {
+    background-color: #D5D8DC;
+    padding: 5px;
 }
