--- a/public/src/css/Filming.css
+++ b/public/src/css/Filming.css
@@ -19,3 +19,9 @@ h2 {
     font-style: italic;
     text-align: center;
 }
+
+
+.service-filming-inform p {
+    font-size: 20px;
+    font-family: 'Times New Roman', Times, serif;
+}
