--- a/public/src/css/Flycam.css
+++ b/public/src/css/Flycam.css
@@ -14,8 +14,13 @@
     padding: 5px;
 }
 
-h2 {
+h1 {
     font-family: 'Courier New', Courier, monospace;
     font-style: italic;
+    text-align: center;
+}
+
+h3 {
+    font-family: 'Times New Roman', Times, serif;
     text-align: center;
 }
