--- a/public/src/css/ServicesPage.css
+++ b/public/src/css/ServicesPage.css
@@ -17,7 +17,7 @@
 
 .service-inform {
     text-align: center;
-    width: 70%;
+    width: 75%;
     height: 500px;
     background-color: white;
     margin-left: auto;
@@ -34,6 +34,9 @@
 
 
 
+
+
+
 .col-inform {
     padding: 10px;
 }
@@ -41,9 +44,17 @@
 .col-inform h1 {
     font-family: 'Courier New', Courier, monospace;
     font-style: italic;
+    text-align: center;
+
 
 }
 
 .background-phim {
     padding: 5px;
+}
+
+h2 {
+    font-family: 'Courier New', Courier, monospace;
+    font-style: italic;
+    text-align: center;
 }
