--- a/public/src/css/ServicesPage.css
+++ b/public/src/css/ServicesPage.css
@@ -10,7 +10,7 @@
 }
 
 .backgroundImage {
-    background-image: url('../assets/backgroundService.gif');
+    background-image: url('../assets/Service/giphy.gif');
     background-size: cover;
 
 }
