--- a/public/src/css/HomePagePanel.css
+++ b/public/src/css/HomePagePanel.css
@@ -19,16 +19,16 @@
     text-align: center;
     width: 75%;
     height: 500px;
-    background-color: white;
     margin-left: auto;
     margin-right: auto;
-    box-shadow: 5px 10px;
     padding: 5px;
     margin-top: auto;
     margin-bottom: auto;
     flex-direction: column;
     display: flex;
-    justify-content: space-between;
+    color: black;
+    background-color: #ffbe98;
+    justify-content: center;
 
 }
 
@@ -41,7 +41,7 @@
     text-align: center;
     font-style: bold;
     font-weight: bolder;
-    font-size: 33px;
+    color: black;
 }
 
 .background-phim {
@@ -52,9 +52,6 @@ h2 {
     font-family: 'Times New Roman', Times, serif;
     text-align: center;
     font-size: 50px;
-    font-style: bold;
-    font-weight: bolder;
-
 }
 
 .col-inform p {
