--- a/public/src/css/Picture.css
+++ b/public/src/css/Picture.css
@@ -5,7 +5,7 @@
     background-color: aliceblue;
     margin-left: auto;
     margin-right: auto;
-    margin-top: auto;
+    margin-top: 20px;
     margin-bottom: auto;
     flex-direction: column;
     display: flex;
